chamber home page v4.3 - Fixed contrast issue with cta-btn

--- a/chamber/styles/chamber-large.css
+++ b/chamber/styles/chamber-large.css
@@ -93,7 +93,7 @@ p {
     background: #2d783b;
     border-radius: 5px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
-    color: #FFEDED;
+    color: #000;
     cursor: pointer;
     font-family: var(--default-font);
     font-weight: 700;
@@ -115,7 +115,7 @@ p {
 
 .cta-btn:hover {
     background-color: #11a141;
-    color: #fff;
+    color: #000;
     transition: background-color 0.1s ease-in;
 }
 
