--- a/chamber/styles/chamber-small.css
+++ b/chamber/styles/chamber-small.css
@@ -23,7 +23,7 @@
 
 
     h1 {
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 
 
